--- a/ReservoirSimulator/ReservoirSimulator.vcxproj
+++ b/ReservoirSimulator/ReservoirSimulator.vcxproj
@@ -131,6 +131,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Functions\Interpolate.cpp" />
+    <ClCompile Include="Functions\PVTCalc.cpp" />
     <ClCompile Include="IO\Print.cpp" />
     <ClCompile Include="IO\PVTReader.cpp" />
     <ClCompile Include="IO\Reader.cpp" />
@@ -138,6 +140,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Data\Properties.hpp" />
+    <ClInclude Include="Functions\Interpolate.hpp" />
+    <ClInclude Include="Functions\PVTCalc.hpp" />
     <ClInclude Include="IO\Print.hpp" />
     <ClInclude Include="IO\PVTReader.hpp" />
     <ClInclude Include="IO\Reader.hpp" />
