--- a/ReservoirSimulator/ReservoirSimulator.vcxproj.filters
+++ b/ReservoirSimulator/ReservoirSimulator.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClCompile Include="IO\Print.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Functions\Interpolate.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Functions\PVTCalc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IO\PVTReader.hpp">
@@ -39,6 +45,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Data\Properties.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Functions\Interpolate.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Functions\PVTCalc.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
