--- a/ReservoirSimulator/ReservoirSimulator.vcxproj.filters
+++ b/ReservoirSimulator/ReservoirSimulator.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Functions\PVTCalc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Functions\PVT.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IO\PVTReader.hpp">
@@ -53,8 +56,12 @@
     <ClInclude Include="Functions\PVTCalc.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Functions\PVT.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Data\pvt.txt" />
+    <Text Include="Data\project2.txt" />
   </ItemGroup>
 </Project>
