--- a/ReservoirSimulator/ReservoirSimulator.vcxproj
+++ b/ReservoirSimulator/ReservoirSimulator.vcxproj
@@ -131,20 +131,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Functions\Interpolate.cpp" />
-    <ClCompile Include="Functions\PVT.cpp" />
-    <ClCompile Include="Functions\PVTCalc.cpp" />
     <ClCompile Include="IO\Print.cpp" />
     <ClCompile Include="IO\Reader.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Simulator\Data.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Data\Properties.hpp" />
-    <ClInclude Include="Functions\Interpolate.hpp" />
-    <ClInclude Include="Functions\PVT.hpp" />
-    <ClInclude Include="Functions\PVTCalc.hpp" />
     <ClInclude Include="IO\Print.hpp" />
     <ClInclude Include="IO\Reader.hpp" />
+    <ClInclude Include="Simulator\Data.hpp" />
+    <ClInclude Include="Simulator\DataType.hpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Data\project2.txt" />
