--- a/ReservoirSimulator/ReservoirSimulator.vcxproj
+++ b/ReservoirSimulator/ReservoirSimulator.vcxproj
@@ -131,16 +131,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Functions\Interpolate.cpp" />
     <ClCompile Include="IO\Print.cpp" />
     <ClCompile Include="IO\Reader.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Simulator\Data.cpp" />
+    <ClCompile Include="Simulator\Simulator.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Functions\Interpolate.hpp" />
     <ClInclude Include="IO\Print.hpp" />
     <ClInclude Include="IO\Reader.hpp" />
     <ClInclude Include="Simulator\Data.hpp" />
     <ClInclude Include="Simulator\DataType.hpp" />
+    <ClInclude Include="Simulator\Enum.hpp" />
+    <ClInclude Include="Simulator\Simulator.hpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Data\project2.txt" />
