--- a/ReservoirSimulator/ReservoirSimulator.vcxproj.filters
+++ b/ReservoirSimulator/ReservoirSimulator.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Simulator\Model.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Simulator\Test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IO\Reader.hpp">
